cmake_minimum_required(VERSION 3.8)
find_package( PythonLibs 2.7 REQUIRED )
find_package( PythonInterp 2.7 REQUIRED )
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/lib)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(receipt main.cpp)
target_link_libraries(receipt -lpython2.7 online_get_lib)
